# OpenImageDebugger

./: .clang-format-ignore  .clang-tidy  .clinerules  .commisery.yml  .drone.yml  .gitignore  .gitmodules  .sonarcloud.properties  .travis.yml  BUILD.md  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  TODO.md  build.sh  commom.cmake  common.cmake  common.pri  conan_profile  conanfile.py  conanfile.txt  configure_ubuntu_16.sh  gdb-imagewatch.pro  mingw-profile  mingw-profile.txt  oid.pro  sonar-project.properties
resources/oidmcp/: CHANGELOG.md  README.md  pyproject.toml  server.json
resources/oidmcp/acceptance/: README.md  gen_image.py  latency.py  spin.py
resources/oidmcp/oidmcp/: __init__.py  _wireframe.py  analysis.py  buffers.py  discovery.py  protocol.py  render.py  server.py  viewer_meta.py
resources/oidmcp/tests/: conftest.py  test_analysis.py  test_buffers.py  test_declarative_discovery.py  test_declarative_engine.py  test_discovery.py  test_eigen_lldb.py  test_endpoint_dispatch.py  test_endpoint_framing.py  test_endpoint_lifecycle.py  test_golden_frames.py  test_installed_layout.py  test_protocol_client.py  test_render.py  test_server_tools.py  test_size_guard.py  test_template_args.py  test_viewer_meta.py  test_viewer_refused.py  test_wireframe_vendored.py
src/: .clang-format  CMakeLists.txt  background.cpp  background.hpp  buffer.cpp  buffer.hpp  buffer_exporter.cpp  buffer_exporter.hpp  buffer_values.cpp  buffer_values.hpp  bufferrequestmessage.cpp  bufferrequestmessage.h  camera.cpp  camera.hpp  component.hpp  game_object.cpp  game_object.h  giw_window.cpp  giw_window.h  glcanvas.cpp  glcanvas.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  managed_pointer.cpp  math.cpp  math.hpp  oid_window.cpp  shader.cpp  shader.hpp  src.pro  stage.cpp  stage.hpp  symbol_completer.cpp  symbol_completer.h  symbol_search_input.h  window.hpp
src/debuggerinterface/: buffer_request_message.cpp  buffer_request_message.h  managed_pointer.cpp  managed_pointer.h  preprocessor_directives.h  python_native_interface.cpp  python_native_interface.h
src/giwbridge/: giw_bridge.cpp  giw_bridge.h  giwbridge.pri  giwbridge.pro
src/giwbridge/python2/: python2.pro
src/giwbridge/python3/: python3.pro
src/host/: app_icon.cpp  app_icon.h  app_icon_decode.cpp  app_icon_decode.h  app_icon_mac.mm  cli_options.cpp  cli_options.h  frame_loop.cpp  frame_loop.h  frame_pacer.cpp  frame_pacer.h  glfw_canvas.cpp  glfw_canvas.h  glfw_canvas_icon.cpp  glfw_host_backend.cpp  glfw_host_backend.h  host_backend.h  imgui_layer.cpp  imgui_layer.h  stage_view.cpp  stage_view.h  ui_fonts.cpp  ui_fonts.h
src/host/agent/: agent_core.cpp  agent_core.h  agent_server.cpp  agent_server.h  discovery_file.cpp  discovery_file.h  native_view_model.cpp  native_view_model.h  view_model.h  wire_buffer_type.h  wire_frame.cpp  wire_frame.h
src/host/io/: expected.h  file_buffer_loader.cpp  file_buffer_loader.h  file_open_queue.cpp  file_open_queue.h  imgui_buffer_exporter.cpp  imgui_buffer_exporter.h  imgui_buffer_exporter_glue.cpp  npy_decode.cpp  npy_decode.h
src/io/: BufferExporter.cppm  buffer_export_adapters.cpp  buffer_export_core.cpp  buffer_export_core.h  buffer_exporter.cpp  buffer_exporter.h
src/ipc/: CMakeLists.txt  RawDataDecode-decode.cppm  RawDataDecode-types.cppm  RawDataDecode.cppm  asio_transport.cpp  asio_transport.h  buffer.proto  buffer_assembler.cpp  buffer_assembler.h  message_exchange.cpp  message_exchange.h  postmessage_transport.cpp  postmessage_transport.h  raw_data_decode.cpp  raw_data_decode.h  tcp_transport.cpp  tcp_transport.h  transport.h
src/math/: Math.LinearAlgebra-mat4.ixx  Math.LinearAlgebra.ixx  assorted.cpp  assorted.h  linear_algebra.cpp  linear_algebra.h  linear_algebra.ixx  mat4.cpp  mat4.h  mat4.ixx  math.linear_algebra-mat4.ixx  math.linear_algebra.ixx  vec4.cpp  vec4.h  vec4.ixx
src/oidbridge/: CMakeLists.txt  library_path.h  library_path_unix.cpp  library_path_win32.cpp  oid_bridge.cpp  oid_bridge.h  oidbridge.cmake  oidbridge.pri
src/platform/: app_nap.h  app_nap_mac.mm  app_platform.h  app_platform_native.cpp  app_platform_wasm.cpp  app_services.cpp  app_services.h  display_env.cpp  display_env.h  gl_dialect.cpp  gl_dialect.h  gl_dialect_native.cpp  gl_dialect_wasm.cpp  main_loop.cpp  main_loop.h  native_file_dialog.cpp  native_file_dialog_mac.mm  platform_config.h  postmessage_transport.cpp  postmessage_transport.h  render_scheduler.h  render_scheduler_native.cpp  render_scheduler_wasm.cpp  session_persistence.h  session_persistence_native.cpp  session_persistence_wasm.cpp  transport_factory.cpp  transport_factory.h  transport_factory_native.cpp  transport_factory_wasm.cpp  window_hints.cpp  window_hints.h
src/pythoninterface/: preprocessor_directives.h
src/resources/: resources.qrc
src/shaders/: background_vert_shader.cpp  buff_frag_shader.cpp  buff_vert_shader.cpp  imagewatch_shaders.hpp  text_frag_shader.cpp  text_vert_shader.cpp
src/ui/: decorated_line_edit.cpp  decorated_line_edit.h  gl_canvas.cpp  gl_canvas.h  gl_canvas_native.cpp  gl_canvas_wasm.cpp  gl_text_renderer.cpp  gl_text_renderer.h  go_to_widget.cpp  go_to_widget.h  main_window.cpp  main_window.h  main_window.ui  symbol_completer.cpp  symbol_completer.h  symbol_search_input.cpp  symbol_search_input.h
src/visualization/: events.cpp  events.h  game_object.cpp  game_object.h  gl_text_renderer.cpp  gl_text_renderer.h  glyph_atlas.cpp  glyph_atlas.h  render_canvas.h  shader.cpp  shader.h  stage.cpp  stage.h
testbench/: CMakeLists.txt  main.cpp  testbench.pro
tests/: .clang-format  CMakeLists.txt  test_asio_transport.cpp  test_buffer_assembler.cpp  test_linear_algebra.cpp  test_message_exchange.cpp  test_raw_data_decode.cpp  test_session_state_codec.cpp  test_transport.cpp
tests/host/: app_icon_decode_test.cpp  cli_options_test.cpp  frame_loop_test.cpp  frame_pacer_test.cpp  glfw_canvas_test.cpp  glfw_geometry_test.cpp  stage_view_test.cpp
tests/io/: buffer_export_core_test.cpp
tests/support/: scratch_dir.h
tests/visualization/: glyph_atlas_test.cpp
(+251 files in other folders)
